Add CGAL as a submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
 get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 project(${PROJECT_NAME})
-set(CMAKE_BUILD_TYPE debug)
-#set(CMAKE_BUILD_TYPE release)
+#set(CMAKE_BUILD_TYPE debug)
+set(CMAKE_BUILD_TYPE release)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -46,6 +46,8 @@ FetchContent_MakeAvailable(libigl)
 
 find_package(CGAL REQUIRED COMPONENTS Core)
 # find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+
+message(STATUS "CGAL_DIR: ${CGAL_DIR}")
 
 # Add your project files
 include_directories("./src/")
